--- a/web/template/admin.xhtml
+++ b/web/template/admin.xhtml
@@ -8,8 +8,13 @@
         <h:outputStylesheet library="css" name="bootstrap.css"/>
         <h:outputScript library="js" name="jquery-3.5.0.min.js"/>
         <h:outputStylesheet library="js" name="bootstrap.js"/>
+        <style>
+            .tadiva{
+                background-image: url("resources/petshopimg.jpg");
+            }
+        </style>
     </h:head>
-    <h:body>
+    <h:body styleClass="tadiva">
        <div class="container">
             <h:form>
                 <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -35,7 +40,7 @@
             </h:form>
            <div class="mt-3">
            <ui:insert name="content">
-               Petshop siteme Hoşgeldiniz.
+               Petshop Siteme Hoşgeldiniz.
            </ui:insert>
            </div>
         </div>
