--- a/web/template/admin.xhtml
+++ b/web/template/admin.xhtml
@@ -30,6 +30,7 @@
                              
                             <h:commandLink styleClass="nav-item nav-link" action="/mtm/list" value="Mtm"/>
                             <h:commandLink styleClass="nav-item nav-link" action="/document/document" value="Documents" />
+                            <h:commandLink styleClass="nav-item nav-link" action="/validator/validator" value="Validator" />
                             <h:commandLink styleClass="nav-item nav-link" action="/logout" value="logout" />
 
 
